# ytj

./: CMakeLists.txt  README.md
.github/workflows/: checks.yaml  prerelease.yaml  release.yaml
apps/hello_world/: CMakeLists.txt
apps/hello_world/src/: main.cpp
apps/yt/: CMakeLists.txt
apps/yt/src/: main.cpp
cmake/: CPM.cmake  PFL.cmake
include/yt/: configure.hpp.in  hello.hpp
include/ytj/: ytj.hpp.in
src/ProjectTemplate/: configure.hpp.in  hello.cpp  hello.hpp
src/yt/: hello.cpp
tests/: CMakeLists.txt
tests/ytj-test/: CMakeLists.txt
